objects/Case.object
<CustomObject>
    <fields>
        <fullName>Account_Customer_Type__c</fullName>
        <description>CSC:  Hidden Field to Determine whether the Customer Type 2 is Same for all the Segments. IF yes then the Customer Type 2 value will be updated in the field else the field will be blank.</description>
        <label>Account Customer Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>text(Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Subject__c</fullName>
        <inlineHelpText>Additional Case Subject (Segment specific)</inlineHelpText>
        <label>Additional Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreed_Commissioning_Days__c</fullName>
        <inlineHelpText>Number of agreed commissioning days as per Purchase Order terms</inlineHelpText>
        <label>Agreed Commissioning Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <controllingField>Danfoss_Division__c</controllingField>
            <picklistValues>
                <fullName>Air compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Conveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aseptic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ball Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch dyeing machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blender/blow-room (Fan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifugal Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifuge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean room (fan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling compressor (Screw)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling compresssor (Piston)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawler cranes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crushers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decanter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Displacement Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling, boring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth moving machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extruder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Service_Engineer_Name__c</fullName>
        <label>Assigned Service Engineer Name</label>
        <picklist>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajay[9038000489] - Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajit[9891670039] - DigitalTechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMIT[8826793299] - PSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMIT[9219656507] - MULTITECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMIT[9540373228] - ADHUNIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anil[9818598233] - Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANISH[9560810469] - ADHUNIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankit[9993563022] - T4Texultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annaswamy[9444410772] - PowerControl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARPAN[9007805977] - TRANSTECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arun[9999982121] - VateckAutomation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arvinder[9717794296] - Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashutosh[9824408988] - Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asim[9326023020] - ADAutomation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avinash[9422659786] - AlphaAutomation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNISH[7087971499] - EMSON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALRAM[9216769599] - EMSON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHAWANI[9861625373] - DEEP ENTERPRICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANDRAKANT[8511158632] - J N AUTOMATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEEPAK[8866819479] - PERFECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHARMESH[9825166459] - EUROTECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmesh B[9016474626] - EurotechPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmesh P[9825924026] - EurotechPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinesh[9448625661] - ThoughtWorks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gnana Prakash[9003079161] - Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDIK[9998888299] - J N AUTOMATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIREN[9687643949] - DIGICON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HITESH[9216769899] - EMSON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jay[9824627874] - EurotechPower</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Channel_Partner_Details__c</fullName>
        <formula>&quot;Partner Address: &quot; &amp; Assigned_To_Channel_Partner__r.ShippingStreet &amp; &quot;, &quot; &amp; Assigned_To_Channel_Partner__r.ShippingCity &amp; &quot;, &quot; &amp; Assigned_To_Channel_Partner__r.ShippingState &amp; &quot;, &quot; &amp; Assigned_To_Channel_Partner__r.ShippingPostalCode &amp; &quot;, &quot; &amp; Assigned_To_Channel_Partner__r.ShippingCountry   &amp; &quot;, &quot; &amp; BR()+&quot;Partner Phone: &quot;&amp;Assigned_To_Channel_Partner__r.Phone + BR()+&quot;Partner Email: &quot;+ Assigned_To_Channel_Partner__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Channel Partner Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.Customer_Type_1_RCCC__c</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Customer_Type_1_PE__c</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Customer_Type_1_HS__c</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <infoMessage>Select Channel Partner</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>ChannelPartnerCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <inlineHelpText>Business Org submitting the case request.</inlineHelpText>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turolla</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSC_CER_Contact_ReadOnly__c</fullName>
        <formula>Contact.FirstName
+ 
IF(LEN(Contact.FirstName) &gt; 0, &quot; &quot; , &quot;&quot;)
+
Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Customer_Indicator__c</fullName>
        <formula>TEXT(Account.CSC_Customer_Indicator__c)</formula>
        <label>CSC Customer Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Owner_Region__c</fullName>
        <label>CSC_Owner_Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Reporting_Region__c</fullName>
        <description>C&amp;E CSC: Designed to assign a region to every case for reporting purposes</description>
        <formula>IF( 
NOT(ISBLANK( CSC_Owner_Region__c )) , CSC_Owner_Region__c ,
IF(AND(NOT(ISBLANK(Case_Email_Sent_To__c)),CONTAINS(&quot;cs@danfoss.de:cs@danfoss.at:cs@danfoss.ch&quot;,Case_Email_Sent_To__c)), &quot;CER&quot;,
IF(AND(NOT(ISBLANK(Case_Email_Sent_To__c)),CONTAINS(&quot;danfoss.india@danfoss.com:danfoss.indiavm@danfoss.com:danfoss.in@danfoss.com&quot;, Case_Email_Sent_To__c)), &quot;India&quot;,   
IF( BEGINS(Owner:Queue.QueueName,&quot;CER&quot;), &quot;CER&quot;,
IF(BEGINS(Owner:Queue.QueueName,&quot;India&quot;), &quot;India&quot;,
null
) 
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSC Reporting Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Close_Age__c</fullName>
        <description>CE CSC Case Close Age in business Hours and also shows the elapsed time for open cases</description>
        <formula>IF( IsClosed, 
IF(DATEVALUE(CreatedDate)= DATEVALUE(ClosedDate),
(ClosedDate - CreatedDate) * 24,
((CASE(MOD(DATEVALUE(CreatedDate) - DATE(1985,6,24),7),
0 , CASE( MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+ (FLOOR((DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate))/7)*5)- 2) * 9)
+
MAX((
DATETIMEVALUE(TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot; 12:30:00&quot;) - CreatedDate) * 24, 0)  
+
MAX((ClosedDate - DATETIMEVALUE(TEXT(YEAR(DATEVALUE(ClosedDate))) &amp; &quot;-&quot; &amp; TEXT(MONTH(DATEVALUE(ClosedDate))) &amp; &quot;-&quot; &amp; TEXT(DAY(DATEVALUE(ClosedDate))) &amp; &quot; 03:30:00&quot;)) * 24, 0)
),
IF(DATEVALUE(CreatedDate)= TODAY(),
(NOW() - CreatedDate) * 24,
((CASE(MOD(DATEVALUE(CreatedDate) - DATE(1985,6,24),7),
0 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+ (FLOOR((TODAY() - DATEVALUE(CreatedDate))/7)*5)- 2) * 9)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Close Age (Hr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Email_Sent_To__c</fullName>
        <label>Case Email Sent To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owners_Manager_Email__c</fullName>
        <description>To store the email id of the current Case Owner (When Owner is not Queue)</description>
        <label>Case Owner&apos;s Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Region__c</fullName>
        <inlineHelpText>Region from where the case is originated based on Customer/ Site location</inlineHelpText>
        <label>Case Region</label>
        <picklist>
            <picklistValues>
                <fullName>India - North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Outside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Central</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <label>Case Resolution</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Application review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact information shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convert to Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Information Sent to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document cannot be shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated to Capgemini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice re-issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Credit Note/Debit Note with Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change in Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non conditional FOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order on Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price and/or Availability Sent to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide conditional FOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved over phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Channel Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution provided</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Reason__c</fullName>
        <label>Case Sub Reason</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Line Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Service/Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Handling Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deviation to commercial process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual/Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spindle jam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuator not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow is not there/flow fluctuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC is not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temperature is not achieving/temperature fluctuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR/consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing leads/Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement/Hoteliers/Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance relevant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Invoice - Incorrect VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Invoice - Incorrect Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Invoice - Incorrect Customer Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Invoice - Incorrect Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Confirmation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeOwnertoQueue__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id+&quot;/a?retURL=%2F&quot;+Id+&quot;&amp;newOwn_lkid=&quot;+LEFT($Setup.QueueLevelIDs__c.X1stLevelQ__c,15)+&quot;&amp;newOwn=&quot;+TEXT( $User.Region__c ) , &quot;[Change Owner to Queue]&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeable_Commissioning__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if commissioning is chargeable</inlineHelpText>
        <label>Chargeable Commissioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Details__c</fullName>
        <inlineHelpText>This field is for detailing what was added/edited/deleted in configuration or development components.</inlineHelpText>
        <label>Component Details</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Containment_Action__c</fullName>
        <inlineHelpText>Related to IQOS</inlineHelpText>
        <label>Containment Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Flag__c</fullName>
        <formula>IF( NOT ISBLANK(Text(Country__c)) , IMAGE( &quot;/resource/Flag_icons/png/&quot; + LOWER(LEFT(Text(Country__c),2)) + &quot;.png&quot;, Text(Country__c), 15, 15),
IF(
AND(
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Austria_Email_To_Case__c),
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Swiss_Email_To_Case__c ),
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Germany_Email_To_Case__c )
)
, &quot;DE, CH, AU&quot;,
IF(
 AND(
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Austria_Email_To_Case__c),
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Swiss_Email_To_Case__c )
)
, &quot;AU, CH&quot;,

IF(

AND(
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Austria_Email_To_Case__c),
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Germany_Email_To_Case__c )
)

, &quot;DE, AU&quot;,
IF(
AND(
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Swiss_Email_To_Case__c ),
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Germany_Email_To_Case__c )
)
, &quot;CH, AU&quot;,
IF(
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Germany_Email_To_Case__c ), 
 IMAGE(&quot;/resource/Flag_icons/png/de.png&quot;, &quot;Germany&quot;, 15, 15),
IF(
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Swiss_Email_To_Case__c), 
  IMAGE(&quot;/resource/Flag_icons/png/ch.png&quot;, &quot;Switzerland&quot;, 15, 15),
IF(
 CONTAINS(Case_Email_Sent_To__c, $Setup.CSC_Email_Addresses__c.Austria_Email_To_Case__c), 
 IMAGE(&quot;/resource/Flag_icons/png/at.png&quot;, &quot;Austria&quot;, 15, 15), &quot;&quot;
))))))))</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD: Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE: Unit. Arab Emir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF: Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG: Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI: Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL: Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM: Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN: Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO: Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ: Antarica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR: Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS: Samoa American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT: Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU: Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW: Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ: Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA: Bosnia-Herz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB: Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD: Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE: Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF: Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG: Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH: Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI: Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ: Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL: BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM: Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN: Brunei-Daruessa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO: Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR: Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <inlineHelpText>Related to IQOS</inlineHelpText>
        <label>Country of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>AD: Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE: Unit. Arab Emir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF: Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG: Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI: Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL: Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM: Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN: Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO: Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ: Antarica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR: Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS: Samoa American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT: Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU: Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW: Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ: Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA: Bosnia-Herz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB: Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD: Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE: Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF: Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG: Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH: Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI: Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ: Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL: BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM: Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN: Brunei-Daruessa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO: Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR: Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>